# rust-lib-dlog

./: .gitignore  Cargo.toml  README.md
examples/: dlog-custom.rs  dlog-default.rs  durylog-custom.rs  durylog-default.rs  log-custom.rs  log-default.rs  log.rs
src/: dlog.rs  durylog.rs  lib.rs
