[package]
name = "dlog"
version = "0.1.0"
edition = "2021"
authors = ["Fabio Durigon <develop@dury.it>"]
description = "An easy to use library to implements logging on stdout, file or both."
license = "MIT"
#homepage = ""
#documentation = ""
#repository = ""
keywords = ["log", "logging"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["std"] }
time = { version = "0.3.17", features = ["formatting", "macros"] }
chrono = "0.4"