[package]
name = "durylog"
version = "0.1.1"
edition = "2021"
authors = ["Fabio Durigon <develop@dury.it>"]
description = "An easy to use library to implements logging on stdout, file or both."
license = "MIT"
#homepage = ""
documentation = "https://docs.rs/durylog/"
repository = "https://github.com/durydevelop/rust-lib-durylog"
keywords = ["log", "logging"]
categories = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["std"] }
time = { version = "0.3.17", features = ["formatting", "macros"] }
chrono = "0.4"

[[example]]
name = "log-custom"

[[example]]
name = "log-default"

[[example]]
name = "durylog-custom"

[[example]]
name = "durylog-default"
